--- a/man/mb.1.ronn.erb
+++ b/man/mb.1.ronn.erb
@@ -29,7 +29,7 @@ change the behavior.
 
 <%- class_options.each do |class_option| -%>
     <%- opts = class_option[1].aliases + ["--#{class_option[0]}"] -%>
-  * <%= opts.collect {|x| "`#{x}`"}.join(", ") %>:<br>
+  * <%= opts.collect {|x| "`#{x}`"}.join(", ") %>:
     <%= class_option[1].description %>
     <%- if class_option[1].show_default? -%>(Default: <%= class_option[1].default %>)<%- end -%>
     <%- if class_option[1].enum -%>Possible values: <%= class_option[1].enum.join(', ') %><%- end -%>
@@ -39,21 +39,23 @@ change the behavior.
 ## COMMANDS
 
 <%- extended_commands.each do |command| -%>
-  * <%= command[0] %>:<br>
-    <%= command[1] %>
-    <%- if command[2] -%>
-      <br><%= command[2] %>
-    <%- end -%>
-    <%- command[3].each do |opt| -%>
-      * <%= opt[1].usage.gsub(/[\[\]]/,'') %><%= " (REQUIRED)" if opt[1].required? %><br>
-        <%= opt[1].description %><br>
-        <%- if opt[1].show_default? -%><br>Default: <%= opt[1].default %><%- end -%>
-        <%- if opt[1].enum -%><br>Possible values: <%= opt[1].enum.join(', ') %><%- end -%>
-    <%- end -%>
+<%= command[0] %><br>
+<%= command[1] %>
+<%- if command[2] -%>
+  <br><%= command[2] %>
+<%- end -%>
+
+<%- command[3].each do |opt| -%>
+  * <%= opt[1].usage.gsub(/[\[\]]/,'') %><%= " (REQUIRED)" if opt[1].required? %>:
+    <%= opt[1].description %><br>
+    <%- if opt[1].show_default? -%><br>Default: <%= opt[1].default %><%- end -%>
+    <%- if opt[1].enum -%><br>Possible values: <%= opt[1].enum.join(', ') %><%- end -%>
+<%- end -%>
 
 <%- end -%>
-  * `mb` `<plugin>` `<component>` `<command>`:<br>
-    Run a command defined in a component in the specified plugin. Options and usage are plugin-defined.
+
+`mb` `<plugin>` `<component>` `<command>`<br>
+Run a command defined in a component in the specified plugin. Options and usage are plugin-defined.
 
 ## COPYRIGHT
 
